<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.flatcode.beautytouch.ui.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/skinProductsFragment"
        android:name="com.flatcode.beautytouch.ui.post.SkinProductsFragment"
        android:label="@string/skin_products"
        tools:layout="@layout/fragment_skin_products" />

    <fragment
        android:id="@+id/hairProductsFragment"
        android:name="com.flatcode.beautytouch.ui.post.HairProductsFragment"
        android:label="@string/hair_products"
        tools:layout="@layout/fragment_hair_products" />

    <fragment
        android:id="@+id/shoppingCentersFragment"
        android:name="com.flatcode.beautytouch.ui.shopping.ShoppingCentersFragment"
        android:label="@string/shopping_centers"
        tools:layout="@layout/fragment_shopping_centers" />

</navigation>