<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/backWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@null"
        android:src="@color/white"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/backBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@null"
        android:src="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbarRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="?colorError"
                android:textSize="21sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/number_phone"
                    android:textColor="?colorError"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_phone"
                    app:drawableTint="?colorError" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/phoneEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:background="@drawable/button"
                        android:hint="@string/my_number"
                        android:inputType="phone"
                        android:maxLength="50"
                        android:padding="15dp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/button6"
                        android:backgroundTint="@color/black"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:id="@+id/go"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/button2"
                android:contentDescription="@null"
                android:rotation="180"
                android:src="@drawable/ic_back_white"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>