<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnBackground"
    android:orientation="vertical"
    tools:context=".ui.profile.AboutMeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:strokeWidth="0dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:contentDescription="@null"
                                android:src="@color/image_profile"
                                app:layout_constraintDimensionRatio="1:1"
                                tools:ignore="MissingConstraints" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/edit_image_icon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="top|right"
                            android:layout_margin="5dp"
                            android:background="@drawable/button_number"
                            android:backgroundTint="?mc_track"
                            android:contentDescription="@null"
                            android:padding="2dp"
                            android:src="@drawable/ic_adds"
                            app:layout_constraintDimensionRatio="1:1"
                            app:tint="@color/white"
                            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle" />

                    </FrameLayout>

                </com.google.android.material.card.MaterialCardView>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button"
                    android:hint="@string/about_me"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLength="1000"
                    android:padding="10dp"
                    android:textColor="?colorError"
                    android:textColorHint="?colorError"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="50dp"
                    android:background="@drawable/button"
                    android:backgroundTint="?mc_track"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/show_sheet"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="50dp"
                    android:background="@drawable/b"
                    android:backgroundTint="?mc_track"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:padding="15dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back_white"
                    android:text="@string/publish" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>